refactor: add get meme by symbol
